fix(wiki): show live page count in knowledge base list and detail